Customer paged list object swag response
